# Routes

./: .gitattributes  .gitignore  .gitignore   .travis.yml  CMakeLists.txt  PULL_REQUEST_TEMPLATE.md  README.md  createRoutes.sql  data.sh  doxygen-config  main.cpp  params.json  setup-win.sh  setup.bat  setup.sh  travis.sh
doc/: annotated.html  bezier_8cpp.html  bezier_8h.html  bezier_8h_source.html  class_bezier-members.html  class_bezier.html  class_elevation_data-members.html  class_elevation_data.html  class_elevation_stitch.html  class_genetics-members.html  class_genetics.html  class_h_t_m_l.html  class_kernel-members.html  class_kernel.html  class_pod-members.html  class_pod.html  class_population-members.html  class_population.html  classes.html  dir_0f3b9fbb4618702e0c3f1f6fecbfd9bc.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_88717267c3b22c2cf2afacffe83e9c41.html  dir_887594e1950329041ffedf61f87da811.html  dir_a1608451f56e8d0cc8a838ddd7511c9d.html  dir_d988055f46b043ab1751aac9a297dcda.html  dir_dbc64af3de50f21dd0d1af95d9f4e946.html  elevation-stitch_8cpp.html  elevation-stitch_8h.html  elevation_8cpp.html  elevation_8h.html  elevation_8h_source.html  files.html  functions.html  functions_func.html  functions_vars.html  genetics_8cpp.html  genetics_8h.html  genetics_8h_source.html  globals.html  globals_defs.html  (+13 more)
doc/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  classes_1.js  classes_2.js  defines_0.js  defines_2.js  files_0.js  files_1.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  searchdata.js  variables_0.js  variables_1.js
docs/: annotated.html  bezier_8cpp.html  bezier_8h.html  bezier_8h_source.html  class_bezier-members.html  class_bezier.html  class_c_m_d-members.html  class_c_m_d.html  class_d_b-members.html  class_d_b.html  class_elevation_data-members.html  class_elevation_data.html  class_elevation_data_1_1___static_g_d_a_l-members.html  class_elevation_data_1_1___static_g_d_a_l.html  class_elevation_stitch-members.html  class_elevation_stitch.html  class_genetics.html  class_h_t_m_l-members.html  class_h_t_m_l.html  class_kernel-members.html  class_kernel.html  class_multi_normal-members.html  class_multi_normal.html  class_pod-members.html  class_pod.html  class_population-members.html  class_population.html  class_routes-members.html  class_routes.html  class_routes_queue-members.html  class_routes_queue.html  class_routes_server-members.html  class_routes_server.html  class_sample_generator-members.html  class_sample_generator.html  class_spline-members.html  class_spline.html  classes.html  cmd_8cpp.html  cmd_8h.html  (+98 more)
docs/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  defines_0.js  defines_1.js  defines_3.js  defines_4.js  defines_5.js  defines_6.js  defines_7.js  defines_8.js  defines_a.js  enums_0.js  (+39 more)
htdocs/: calculate.html  dark.json  hyperloop_map.json  index.html  info.html  route.html  template.html
htdocs/css/: calculate.css  header.css  shared.css  ui.css
htdocs/script/: config.js  graph.js  index.js  info.js  map-init.js  routes.js
htdocs/scripts/: calculate-visual.js  calculate.js  config.js  header.js  jquery-3.2.1.min.js  map-control.js  scroll-to.js
htdocs/style/: index.css  info.css  navbar.css  places.css  route.css  shared.css
opencl/: kernel_cost.opencl  kernel_minmax.opencl
python/: temp-plotter.py
src/: main.cpp
src/bezier/: bezier.cpp  bezier.h
src/cmd/: cmd.cpp  cmd.h
src/db/: db.cpp  db.h
src/elevation/: elevation-stitch.cpp  elevation-stitch.h  elevation.cpp  elevation.h
src/genetics/: genetics.cpp  genetics.h  population.cpp  population.h
src/html/: html.cpp  html.h
src/opencl/: kernel.cpp  kernel.h
src/pod/: pod.cpp  pod.h
src/routes/: routes.cpp  routes.h
src/routes-exec/: main.cpp
src/routes-exec/cmd/: cmd.cpp  cmd.h
src/routes-lib/: routes.cpp  routes.h
src/routes-lib/bezier/: bezier.cpp  bezier.h
src/routes-lib/configure/: configure.cpp  configure.h
src/routes-lib/database/: database.cpp  database.h
src/routes-lib/db/: db.cpp  db.h
src/routes-lib/elevation/: elevation-stitch.cpp  elevation-stitch.h  elevation.cpp  elevation.h
src/routes-lib/genetics/: genetics.cpp  genetics.h  population.cpp  population.h
src/routes-lib/html/: html.cpp
src/routes-lib/normal/: multinormal.cpp  multinormal.h  normal_gen.cpp  normal_gen.h
src/routes-lib/opencl/: kernel.cpp  kernel.h
src/routes-lib/pod/: pod.cpp  pod.h
src/routes-lib/spline/: spline.cpp  spline.h
src/routes-server/: main.cpp
src/routes-server/queue/: queue.cpp  queue.h
src/routes-server/server/: server.cpp  server.h
src/routes-tests/: test_bezier.cpp  test_elevation.cpp  test_multinormal.cpp  test_pod.cpp  test_spline.cpp  tests.cpp
